# menu_suggestion

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/dgy/menusuggestion/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/dgy/menusuggestion/: LlamaInference.kt  LlamaPromptBuilder.kt  LlamaViewModel.kt  MainActivity.kt
app/src/main/java/com/dgy/menusuggestion/data/: MenuData.kt  PreferenceRepository.kt  PreferenceViewModel.kt
app/src/main/java/com/dgy/menusuggestion/ui/: LlmResultView.kt  MenuSuggestionScreen.kt
app/src/main/java/com/dgy/menusuggestion/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/dgy/menusuggestion/weather/: LatLonToGrid.kt  LocationProvider.kt  WeatherApiService.kt  WeatherCard.kt  WeatherModels.kt  WeatherRepository.kt  WeatherViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/dgy/menusuggestion/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
